Bluewolf SFMTA/src/objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>Block_Number__c</fullName>
        <label>Block Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bus_Stop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bus Stop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Busiest_Hours__c</fullName>
        <label>Busiest Hours</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <label>Business Hours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Square_Feet__c</fullName>
        <label>Business Square Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseLu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseLu</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Locations (CaseLu)</relationshipLabel>
        <relationshipName>Locations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Name_LU__c</fullName>
        <formula>CaseLu__r.Business_Name_if_applicable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Name LU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Conflict_Description__c</fullName>
        <label>Conflict Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conflict_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conflict Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corral_Mural__c</fullName>
        <label>Corral Mural</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cross_Street_1__c</fullName>
        <label>Cross Street 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cross_Street_2__c</fullName>
        <label>Cross Street 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Racks__c</fullName>
        <inlineHelpText>If Yes, upload Gift Agreement</inlineHelpText>
        <label>Custom Racks</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Daily_Shuttle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daily Shuttle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <label>Days Open</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimensions__c</fullName>
        <label>Dimensions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direction_from_Reference_Point__c</fullName>
        <label>Direction from Reference Point</label>
        <picklist>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distance_from_Curb__c</fullName>
        <label>Distance from Curb</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distance_from_Reference_Point__c</fullName>
        <label>Distance from Reference Point</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enforcement_End__c</fullName>
        <label>Enforcement End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enforcement_Start__c</fullName>
        <label>Enforcement Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_times_of_highest_usage__c</fullName>
        <label>Estimated times of highest usage</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Number_of_Racks__c</fullName>
        <label>Existing Number of Racks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Footage__c</fullName>
        <label>Footage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ifyestofrontage__c</fullName>
        <label>If Yes to Frontage, what side</label>
        <picklist>
            <picklistValues>
                <fullName>Front</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Side</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rear of Building</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Funding__c</fullName>
        <label>Installation Funding</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer_Title__c</fullName>
        <label>Installer Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer__c</fullName>
        <inlineHelpText>Installer&apos;s name</inlineHelpText>
        <label>Installer</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intended_Users__c</fullName>
        <label>Intended Users</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_requested_zone_within_your_frontage__c</fullName>
        <label>Is requested zone within your frontage?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Length_of_zone_or_parking_spaces__c</fullName>
        <label>Length of zone or parking spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Num__c</fullName>
        <label>List Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Address_Number__c</fullName>
        <inlineHelpText>The numbers that most street addresses start with, such as &quot;453&quot; Main Street.</inlineHelpText>
        <label>Street Address Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Description__c</fullName>
        <label>Location Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Photo__c</fullName>
        <label>Location Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Location_Specifics__c</fullName>
        <label>Location Specifics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Street__c</fullName>
        <label>Street Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meters__c</fullName>
        <label># Meters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_customers_visitors_daily__c</fullName>
        <label># of customers/visitors daily</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_disabled_persons_visiting_daily__c</fullName>
        <label># of disabled persons visiting daily</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Pickups_Deliveries_Daily__c</fullName>
        <label>Number of Pickups/Deliveries Daily</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Racks__c</fullName>
        <label>Number of Racks Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Odd_Even__c</fullName>
        <label>Odd/Even</label>
        <picklist>
            <picklistValues>
                <fullName>Odd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Even</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_Responsible_for_Maintenance__c</fullName>
        <label>Person Responsible for Maintenance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_By_Date__c</fullName>
        <label>Post By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_By_Time__c</fullName>
        <label>Post By Time</label>
        <picklist>
            <picklistValues>
                <fullName>1:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Staff_Date__c</fullName>
        <label>Pre Staff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Procurement_Funding__c</fullName>
        <label>Procurement Funding</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Hearing_Date__c</fullName>
        <label>Public Hearing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purpose_Intended_Use_of_Zone__c</fullName>
        <label>Purpose/Intended Use of Zone</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Point__c</fullName>
        <label>Reference Point</label>
        <picklist>
            <picklistValues>
                <fullName>North Property Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Property Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Property Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Property Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest Property Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest Property Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast Property Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast Property Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Not Property Line)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <picklist>
            <picklistValues>
                <fullName>because this is not a legitimate driveway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>because of parking removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>because of an extra wide driveway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>because this is a residential area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>because the location doesn&apos;t meet ADA requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>because of off street parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>because of other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Residential_Commercial__c</fullName>
        <label>Residential/Commercial</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Schedule_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule Lookup</label>
        <referenceTo>Schedule__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seating_Capacity__c</fullName>
        <label>Seating Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Set_Up_Time__c</fullName>
        <label>Set Up Time</label>
        <picklist>
            <picklistValues>
                <fullName>1:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Side__c</fullName>
        <label>Side</label>
        <picklist>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signs__c</fullName>
        <label># Signs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spaces_Installed__c</fullName>
        <inlineHelpText># of Bike Racks Installed</inlineHelpText>
        <label>Spaces Installed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Additional Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Public Hearing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Hearing Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved with Conditiions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Revocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revoked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appealed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Implemented In Field</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Surface__c</fullName>
        <label>Street Surface</label>
        <picklist>
            <picklistValues>
                <fullName>Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asphalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+ Text</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor_District__c</fullName>
        <label>Supervisor District</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supv_District_Field__c</fullName>
        <label>Supv District Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Surface_Other__c</fullName>
        <label>Surface Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <label>Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Funding__c</fullName>
        <label>Survey Funding</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Staff__c</fullName>
        <label>Survey Staff</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Tech_Installer_Notes__c</fullName>
        <label>Survey Tech/Installer Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TASC_Date__c</fullName>
        <label>TASC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temporary_Taxi_Zones__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temporary Taxi Zones</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tow_Away_Zone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tow Away Zone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Towing_Instruction__c</fullName>
        <label>Towing Instruction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Business__c</fullName>
        <label>Type of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Wholesale/Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel/Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religious Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Rack__c</fullName>
        <formula>TEXT( Case__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Rack</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Zone__c</fullName>
        <label>Type of Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Driveways/Red Zones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow/Commercial Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green/Short Term Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White/Passenger Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue/Disability</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Typical_Size_and_Type_of_Truck__c</fullName>
        <label>Typical Size and Type of Truck</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units_Installed__c</fullName>
        <inlineHelpText>Units Installed</inlineHelpText>
        <label>Units Installed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Requested__c</fullName>
        <inlineHelpText># of BIke Requested by Customer</inlineHelpText>
        <label>Units Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Surveyed__c</fullName>
        <inlineHelpText>How Many Racks a Surveyor Surveys at Location</inlineHelpText>
        <label>Units Surveyed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>White_Zone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>White Zone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order_Notes__c</fullName>
        <label>Work Order Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_Ordered_Date__c</fullName>
        <label>Work Ordered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zone_Specs__c</fullName>
        <label>Zone Specs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>of_Rooms_Units__c</fullName>
        <label># of Rooms/Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_portable_toilets__c</fullName>
        <label># of portable toilets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Location_Address_Number__c</columns>
        <columns>Location_Street__c</columns>
        <columns>Location_Description__c</columns>
        <columns>Location_Specifics__c</columns>
        <columns>Primary_Location__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>System_Administrator</role>
            <roleAndSubordinates>Bike_Parking_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bike_Parking_Surveyor_Queue</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>List_Num__c</columns>
        <columns>Location_Address_Number__c</columns>
        <columns>Location_Street__c</columns>
        <columns>Number_of_Racks__c</columns>
        <columns>Location_Description__c</columns>
        <columns>CaseLu__c</columns>
        <columns>Case_Name_LU__c</columns>
        <filterScope>Everything</filterScope>
        <label>Bike Parking Survey Tech Queue</label>
        <sharedTo>
            <group>Bike_Parking</group>
            <role>Bike_Parking_Manager</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CCP_Approved_Locations</fullName>
        <columns>Case__c</columns>
        <columns>NAME</columns>
        <columns>Location_Address_Number__c</columns>
        <columns>Location_Street__c</columns>
        <columns>Status__c</columns>
        <columns>Type_of_Zone__c</columns>
        <columns>Zone_Specs__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Location__c.Color_Curbs</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>CCP - Approved Locations</label>
        <sharedTo>
            <group>Color_Curbs</group>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CCP_Denied_Locations</fullName>
        <columns>NAME</columns>
        <columns>Location_Address_Number__c</columns>
        <columns>Location_Street__c</columns>
        <columns>Type_of_Zone__c</columns>
        <columns>Zone_Specs__c</columns>
        <columns>Case__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Location__c.Color_Curbs</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </filters>
        <label>CCP - Denied Locations</label>
        <sharedTo>
            <group>Color_Curbs</group>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CCP_Locations_Approved_w_Conditions</fullName>
        <columns>NAME</columns>
        <columns>Location_Address_Number__c</columns>
        <columns>Location_Street__c</columns>
        <columns>Status__c</columns>
        <columns>Type_of_Zone__c</columns>
        <columns>Zone_Specs__c</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Location__c.Color_Curbs</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved with Conditiions</value>
        </filters>
        <label>CCP - Locations Approved w/ Conditions</label>
        <sharedTo>
            <group>Color_Curbs</group>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
</CustomObject>